task-a3/frontend-deployment-updated.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cs3219-otot-a
  name: todo-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: ghcr.io/ianyong/todo-frontend:1.0.0
        resources:
          limits:
            cpu: 50m
          requests:
            cpu: 20m
