task-a3/frontend-service-updated.yml
apiVersion: v1
kind: Service
metadata:
  namespace: cs3219-otot-a
  name: todo-frontend
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
