task-a3/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cs3219-otot-a
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
spec:
  defaultBackend:
    service:
      name: todo-backend
      port:
        number: 8000
  rules:
  - host: todo.cs3219.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-backend
            port:
              number: 8000
